Dando detalles en la pagina tragos.html

--- a/tragos.html
+++ b/tragos.html
@@ -26,7 +26,7 @@
             
             <div class="header__texto">
           <!--  <h2 class="no-margin">Auténtica Comida Tradicional</h2> -->
-                <p class="header__slogan">Sabor que me nos apasiona</p>
+            <!--     <p class="header__slogan">Sabor que me nos apasiona</p> -->
                <!--  <a href="#platos" class="btn">Ver Especialidades</a>  -->
             </div>
         </div>
