--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                     </div>
                     <div class="entrada__contenido">
                         <h3 class="entrada__titulo no-margin centrar-texto">Carapulcra con Sopa Seca</h3>
-                        <p class="entrada__texto alinear-justificar">
+                   <!--      <p class="entrada__texto alinear-justificar">
                             La carapulcra con sopa seca ofrece una experiencia gastronómica rica y satisfactoria, con la combinación de texturas y sabores de ambos platos, 
                             la textura robusta de la carapulcra y la complejidad y el equilibrio de la sopa seca. Esta combinación no solo es un festín para el paladar, 
                             sino también un reflejo de la rica herencia cultural y culinaria de la Provincia de Chincha.
-                        </p>
+                        </p> -->
                     <!--     <span class="precio">S/ 25.00</span>
                         <a href="#" class="btn">Ordenar Ahora</a> -->
                     </div>
@@ -114,10 +114,10 @@
                     </div>
                     <div class="entrada__contenido">
                         <h3 class="entrada__titulo no-margin centrar-texto">Pachamanca</h3>
-                        <p class="entrada__texto alinear-justificar">
+                       <!--  <p class="entrada__texto alinear-justificar">
                             La pachamanca tiene un sabor profundo y complejo debido a la combinación de diversas hierbas, especias y el método de cocción lento. La carne queda tierna y jugosa, mientras que los vegetales absorben los sabores de las hierbas y especias. Los ingredientes típicos incluyen carnes como cerdo, pollo, cordero, o res, papas, 
                             camotes, choclo, queso y a veces habas. Las carnes y vegetales se sazonan con una mezcla de especias, hierbas, y ajíes para darles sabor.
-                        </p>
+                        </p> -->
                        <!--  <span class="precio">S/ 35.00</span>
                         <a href="#" class="btn">Ordenar Ahora</a> -->
                     </div>
