--- a/tragos.html
+++ b/tragos.html
@@ -96,7 +96,7 @@
                 
                 <div class="footer__seccion">
                     <h4>Contáctanos</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Av. Principal 123, Chincha</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Av. Argentina N° 778 C.C El Reloj / Frente a Malvinas</p>
                     <p><i class="fas fa-phone"></i> 903150565 - 935378556</p>
                     <p><i class="fas fa-envelope"></i> info@talonrajao.com</p>
                     
