Agredamos el correo de la empresa y redes sociales como Facebook, TikTok y whatsapp

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                     <h4>Contáctanos</h4>
                     <p><i class="fas fa-map-marker-alt"></i> Av. Argentina N° 778 C.C El Reloj 3er Piso Puesto 3014/ Frente a las Malvinas, al frente de la canchas de Fulbito</p>
                     <p><i class="fas fa-phone"></i> 903150565 - 935378556</p>
-                    <p><i class="fas fa-envelope"></i> </p>
+                    <p><i class="fas fa-envelope"></i>amcproducts.ventas@gmail.com</p>
                     
                     <div class="footer__redes">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="facebook.com/amc.gueces"><i class="fab fa-facebook-f"></i></a>
+                        <a href="instagram.com/amcproducts"><i class="fab fa-instagram"></i></a>
+                        <a href="https://wa.me/903150565"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
