Cambiamos link de acceso de Facebook e Instagram

--- a/tragos.html
+++ b/tragos.html
@@ -102,8 +102,8 @@
                     <p><i class="fas fa-envelope"></i>amcproducts.ventas@gmail.com</p>
                     
                     <div class="footer__redes">
-                        <a href="facebook.com/amc.gueces"><i class="fab fa-facebook-f"></i></a>
-                        <a href="instagram.com/amcproducts"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61564654903970&mibextid=qi2Omg&rdid=HOniZevAsXAgO3O5&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2FE2smDupSU3duQyJ4%2F%3Fmibextid%3Dqi2Omg"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/amcproduts?utm_source=qr&igsh=MTFsaTM4eG1rd3JwZw=="><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/903150565"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
